создание email, отправка email о превышение лимита, refactoring